2009-01-13  Jan Nijtmans  <nijtmans@users.sf.net>

	* unix/tcl.m4: fix [tcl-Bug 2502365] Building of head on
	  HPUX is broken when using the native CC
	* unix/configure (autoconf-2.59)

2009-01-13  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tests/constraints.tcl: Made the tests more independent of the presence
	* tests/*.test:          of images in the interpreter.

2009-01-11  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tests/bind.test: Fixed keysym bind tests for unix [Bug 2336454]

2009-01-11  George Peter Staplin <georgeps@users.sourceforge.net>

	* generic/tkEvent.c: Fix a possible segv due to a NULL
	pointer dereference that occurs when XCreateIC fails.

2009-01-11  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* library/bgerror.tcl: Pretty up the unix tk_messageBox
	* library/icons.tcl:   icons with PNG images and grouped
	* library/msgbox.tcl:  all the stock icons in one file.
	* library/tk.tcl:

2009-01-11  Joe English  <jenglish@users.sourceforge.net>

	* generic/ttk/ttkNotebook.c(NotebookCleanup):
	Don't call Tk_DeleteOptionTable(), it's unnecessary 
	and quite possibly harmful [Bug 2496162].

2009-01-08  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tk3d.c:     CONSTify TkDebugBorder
	* generic/tkBind.c:   CONSTify TkStringToKeysym
	* generic/tkBitmap.c: CONSTify TkDebugBitmap
	* generic/tkColor.c:  CONSTify TkDebugColor
	* generic/tkCursor.c: CONSTify TkDebugCursor
	* generic/tkFont.c:   CONSTify TkDebugFont
	* generic/tkInt.decls All those mods TIP #27 complient,
	                      no incompatibility risks.
	* generic/tkIntDecls.h (regenerated)

2009-01-08  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* library/bgerror.tcl: Theme the bgerror dialog and make use of
	our PNG support to improve the icon.

2009-01-07  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* library/tkfbox.tcl: [Bug 2473120] mis-ordered messagebox args.

	* win/tkWinWm.c: prevent grabs being bypassed on Windows [Bug 1847002]
